[package]
name = "vec-query-string-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0", features = ["ws", "headers", "macros", "query"] }
axum-extra = { version = "0.7.0", features = ["query"] }
futures = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
tower = { version = "0.4", features = ["util"] }
hyper = "0.14"
